# morphobase

./: README.md  pyproject.toml
configs/: defaults.yaml
configs/assay/: compensation_block.yaml  gridworld_remap.yaml  growth_usefulness.yaml  identity.yaml  lesion_battery.yaml  lesion_gridworld_remap.yaml  (+21 more)
docs/: Codex_Master_Build_Plan_v1.3a.md  MorphoBASE_v1.3_Project_Report.md  MorphoBASE_v1.3_Whitepaper.md  MorphoBASE_v1.3_Whitepaper_wFigures.odt  MorphoBASEv1.3.latex
morphobase/: clocks.py  registry.py  seeds.py  types.py
scripts/: export_summary.py  fig_benchmark_ablations.py  fig_frontier_channels.py  fig_growth_utility.py  fig_lesion_recovery_by_type.py  fig_master_ladder.py  fig_organism_vs_baselines.py  fig_recovery_competence.py  fig_setpoint_memory.py  rank_permuted_fashion_mnist_sweeps.py  rank_permuted_mnist_sweeps.py  rank_split_fashion_mnist_sweeps.py  rank_split_mnist_sweeps.py  report_benchmark_robustness.py  report_organism_vs_transformer.py  report_stack_d_robustness.py  run_assay.py  run_gridworld_remap_ablations.py  run_gridworld_remap_seed_robustness.py  run_master_build.py  run_permuted_fashion_mnist_ablations.py  run_permuted_fashion_mnist_seed_robustness.py  run_permuted_mnist_ablation_seed_robustness.py  run_permuted_mnist_ablations.py  run_permuted_mnist_seed_robustness.py  run_sequential_rules_ablations.py  run_sequential_rules_seed_robustness.py  run_split_fashion_mnist_ablations.py  run_split_fashion_mnist_seed_robustness.py  run_split_mnist_ablations.py  run_split_mnist_seed_robustness.py  run_sweep.py  scaffold_assay_configs.py
(+80 files in other folders)
